@@ -5,14 +5,12 @@ import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.Test;
 import org.redisson.api.RLock;
 import org.redisson.api.RedissonClient;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import reactor.core.publisher.Flux;
 
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 
 @Slf4j
@@ -31,7 +29,7 @@ public class RedissonTest {
     @Test
     public void Test1() {
 
-        Long start = LocalDateTime.now().toInstant(ZoneOffset.of("+8")).toEpochMilli();
+        long start = LocalDateTime.now().toInstant(ZoneOffset.of("+8")).toEpochMilli();
         Runnable runnableLock = () -> {
             RLock lock = null;
             try {
@@ -60,10 +58,8 @@ public class RedissonTest {
             }
 
         };
-        Flux.range(1, 1000).toStream().collect(Collectors.toList()).parallelStream()
-                .forEach(t -> {
-                    runnable.run();
-                });
+        Flux.range(1, 1000).toStream().toList().parallelStream()
+                .forEach(t -> runnable.run());
         System.out.println("size：" + size);
         System.out.println("count：" + count);
         System.out.println("1000个任务耗时：" + (LocalDateTime.now().toInstant(ZoneOffset.of("+8")).toEpochMilli() - start) + "ms");
